--- a/heavycenter/src/main/AndroidManifest.xml
+++ b/heavycenter/src/main/AndroidManifest.xml
@@ -13,16 +13,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/baseTheme"
+        android:theme="@style/AppBaseTheme"
         tools:replace="android:label,android:theme">
 
-        <activity android:name=".module.main.MainAct">
+        <activity android:name=".module.welc.welc.WelcAct">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".module.acct.acct.AcctAct"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".module.main.MainAct"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".module.myce.MyceAct"
+            android:screenOrientation="portrait"/>
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="fullSensor"
