--- a/heavycenter/src/main/AndroidManifest.xml
+++ b/heavycenter/src/main/AndroidManifest.xml
@@ -17,17 +17,20 @@
         tools:replace="android:label,android:theme">
 
         <activity android:name=".module.welc.welc.WelcAct">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+
         </activity>
         <activity android:name=".module.acct.acct.AcctAct"
             android:screenOrientation="portrait"/>
 
         <activity android:name=".module.main.MainAct"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+        </activity>
 
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
