--- a/heavycenter/build.gradle
+++ b/heavycenter/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'key0'
             keyPassword 'summer'
-            storeFile file('C:/Users/SWSD/Desktop/key.jks')
+            storeFile file('key.jks')
             storePassword 'summer'
         }
     }
