--- a/heavycenter/build.gradle
+++ b/heavycenter/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'key0'
             keyPassword 'summer'
-            storeFile file('key.jks')
+            storeFile file('D:/model/App201712/heavycenter/key.jks')
             storePassword 'summer'
         }
     }
@@ -75,8 +75,10 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile project(':lib')
     implementation files('libs/BaiduLBS_Android.jar')
-    compile 'cn.jiguang.sdk:jpush:3.0.9'  // 此处以JPush 3.0.9 版本为例。
-    compile 'cn.jiguang.sdk:jcore:1.1.7'  // 此处以JCore 1.1.7 版本为例。
+    compile 'cn.jiguang.sdk:jpush:3.0.9'
+    // 此处以JPush 3.0.9 版本为例。
+    compile 'cn.jiguang.sdk:jcore:1.1.7'
+    // 此处以JCore 1.1.7 版本为例。
 }
 repositories {
     mavenCentral()
