--- a/heavycenter/build.gradle
+++ b/heavycenter/build.gradle
@@ -5,17 +5,17 @@ android {
         config {
             keyAlias 'key0'
             keyPassword 'summer'
-            storeFile file('E:/project/App201712/heavycenter/key.jks')
+            storeFile file('D:/model/App201712/heavycenter/key.jks')
             storePassword 'summer'
         }
     }
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.2'
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.siweisoft.heavycenter"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
