--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jakewharton.butterknife'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.2'
     useLibrary 'org.apache.http.legacy'
     //android 6.0 之后 取消支持 Apache HTTP 客户端，要继续使用 Apache HTTP API，您必须先在 build.gradle 文件中声明以下编译时依赖项：
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         //:主要是用于版本升级所用，是INT类型的
         versionName "1.0"
@@ -61,10 +61,13 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libDir')
-    compile 'com.android.support:support-v4:25.3.1'
+    //compile 'com.android.support:support-v4:27.0.2'
+    compile 'com.android.support:support-compat:27.0.2'
+    compile 'com.android.support:support-core-ui:27.0.2'
+    compile 'com.android.support:support-fragment:27.0.2'
     //android 基本支持库
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:recyclerview-v7:27.0.2'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.jakewharton:butterknife:8.4.0'//状态栏设置
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'//注解
