--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -13,7 +13,7 @@ android {
         //:主要是用于版本升级所用，是INT类型的
         versionName "1.0"
         //这个是我们常说明的版本号，由三部分组成<major>.<minor>.<point>,该值是个字符串，可以显示给用户
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        //testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         //单元测试
         multiDexEnabled true
     }
@@ -62,6 +62,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libDir')
     //compile 'com.android.support:support-v4:27.0.2'
+    //noinspection GradleCompatible
     compile 'com.android.support:support-compat:27.0.2'
     compile 'com.android.support:support-core-ui:27.0.2'
     compile 'com.android.support:support-fragment:27.0.2'
@@ -80,7 +81,7 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'//二维码扫码
     compile 'org.xutils:xutils:3.5.0'//网络请求
-    compile 'com.github.lecho:hellocharts-android:v1.5.8'//图表控件
+    //compile 'com.github.lecho:hellocharts-android:v1.5.8'//图表控件
 //    compile 'fm.jiecao:jiecaovideoplayer:5.8.1'//视频控件
     compile 'com.wang.avi:library:2.1.3'//加载动画
     compile 'com.google.code.gson:gson:2.3.1'
@@ -90,4 +91,6 @@ dependencies {
     compile 'com.jaeger.statusbarutil:library:1.4.0'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"//侧滑菜单
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-4'//下拉刷新
+    compile 'id.zelory:compressor:2.1.0'//图片压缩
+    compile 'com.android.support:multidex:1.0.2'//并将 Dalvik 可执行文件分包库添加为依赖项
 }
