--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
     ext.kotlin_version = '1.1.51'
     repositories {
-        jcenter()
         mavenCentral()
+        jcenter()
         google()
     }
     dependencies {
@@ -16,6 +16,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
         maven { url "https://jitpack.io" }
         google()
