--- a/heavycenter/build.gradle
+++ b/heavycenter/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'key0'
             keyPassword 'summer'
-            storeFile file('E:/project/App201712/key.jks')
+            storeFile file('D:/model/App201712/key.jks')
             storePassword 'summer'
         }
     }
