--- a/heavycenter/src/main/AndroidManifest.xml
+++ b/heavycenter/src/main/AndroidManifest.xml
@@ -17,20 +17,21 @@
         tools:replace="android:label,android:theme">
 
         <activity android:name=".module.welc.welc.WelcAct">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity android:name=".module.acct.acct.AcctAct"
+            android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait">
 
         </activity>
 
         <activity android:name=".module.main.MainAct"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+
 
         </activity>
 
@@ -41,10 +42,6 @@
 
         </activity>
 
-        <activity
-            android:name="com.journeyapps.barcodescanner.CaptureActivity"
-            android:screenOrientation="fullSensor"
-            tools:replace="screenOrientation" />
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="zRI2ehMENx33kDG1qTr1GhXofbesLYWj" />
