--- a/heavycenter/build.gradle
+++ b/heavycenter/build.gradle
@@ -15,7 +15,7 @@ android {
     defaultConfig {
         applicationId "com.siweisoft.heavycenter"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
 
@@ -41,6 +41,8 @@ android {
             signingConfig signingConfigs.config
         }
         debug {
+            debuggable true
+            minifyEnabled false //这是关键的，我的问题就是出在这里
             signingConfig signingConfigs.config
         }
     }
