--- a/heavycenter/src/main/AndroidManifest.xml
+++ b/heavycenter/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".module.acct.acct.AcctAct"
-            android:windowSoftInputMode="adjustPan"
+            android:windowSoftInputMode="adjustPan|stateHidden"
             android:screenOrientation="portrait">
 
         </activity>
