--- a/heavycenter/src/main/AndroidManifest.xml
+++ b/heavycenter/src/main/AndroidManifest.xml
@@ -1,54 +1,58 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+          xmlns:tools="http://schemas.android.com/tools"
 
-    package="com.siweisoft.heavycenter">
+          package="com.siweisoft.heavycenter">
 
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application
-        android:name=".HCApp"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_round"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppBaseTheme"
-        tools:replace="android:label,android:theme">
+            android:hardwareAccelerated="true"
+            android:launchMode="singleInstance"
+            android:name=".HCApp"
+            android:icon="@mipmap/ic_launcher_round"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppBaseTheme"
+            tools:replace="android:label,android:theme">
 
-        <activity android:name=".module.welc.welc.WelcAct">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+        <activity android:name=".module.welc.welc.WelcAct"
+                  android:windowSoftInputMode="adjustPan|stateHidden"
+                  android:screenOrientation="portrait">
+
         </activity>
-             <activity android:name=".module.acct.acct.AcctAct"
+        <activity android:name=".module.acct.acct.AcctAct"
                   android:windowSoftInputMode="adjustPan|stateHidden"
                   android:screenOrientation="portrait">
 
         </activity>
 
         <activity android:name=".module.main.MainAct"
-            android:screenOrientation="portrait">
+                  android:windowSoftInputMode="adjustPan|stateHidden"
+                  android:screenOrientation="portrait">
 
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
 
 
 
         <meta-data
-            android:name="com.baidu.lbsapi.API_KEY"
-            android:value="zRI2ehMENx33kDG1qTr1GhXofbesLYWj" />
+                android:name="com.baidu.lbsapi.API_KEY"
+                android:value="zRI2ehMENx33kDG1qTr1GhXofbesLYWj" />
 
         <service
-            android:name="com.baidu.location.f"
-            android:enabled="true"
-            android:process=":remote" >
+                android:name="com.baidu.location.f"
+                android:enabled="true"
+                android:process=":remote" >
         </service>
 
         <receiver android:name=".data.netd.jpush.PushGetter"
-            android:enabled="true">
+                  android:enabled="true">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.REGISTRATION" />
                 <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" />
