--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -7,8 +7,8 @@ android {
     useLibrary 'org.apache.http.legacy'
     //android 6.0 之后 取消支持 Apache HTTP 客户端，要继续使用 Apache HTTP API，您必须先在 build.gradle 文件中声明以下编译时依赖项：
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion 19
+        targetSdkVersion 27
         versionCode 1
         //:主要是用于版本升级所用，是INT类型的
         versionName "1.0"
@@ -65,15 +65,18 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libDir')
-    //compile 'com.android.support:support-v4:27.0.2'
-    //noinspection GradleCompatible
-    compile 'com.android.support:support-compat:27.0.2'
-    compile 'com.android.support:support-core-ui:27.0.2'
-    compile 'com.android.support:support-fragment:27.0.2'
-    compile 'com.android.support:cardview-v7:27.0.2'
     //android 基本支持库
+    compile 'com.android.support:support-v4:27.0.2'
     compile 'com.android.support:appcompat-v7:27.0.2'
+
+    compile 'com.android.support:cardview-v7:27.0.2'
+
+
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:27.0.2'
     compile 'com.android.support:recyclerview-v7:27.0.2'
+
+
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.jakewharton:butterknife:8.4.0'//状态栏设置
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'//注解
@@ -90,11 +93,15 @@ dependencies {
     //compile 'com.github.lecho:hellocharts-android:v1.5.8'//图表控件
 //    compile 'fm.jiecao:jiecaovideoplayer:5.8.1'//视频控件
     compile 'com.wang.avi:library:2.1.3'//加载动画
+
+
+
+
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.hedgehog.ratingbar:app:1.1.2'
 //    compile 'com.shuyu:GSYVideoPlayer:2.0.6'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.jaeger.statusbarutil:library:1.4.0'
+
     compile "com.daimajia.swipelayout:library:1.2.0@aar"//侧滑菜单
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-4'//下拉刷新
     compile 'id.zelory:compressor:2.1.0'//图片压缩
