--- a/heavycenter/src/main/AndroidManifest.xml
+++ b/heavycenter/src/main/AndroidManifest.xml
@@ -38,8 +38,8 @@
         </activity>
 
         <activity
-            android:name="com.journeyapps.barcodescanner.CaptureActivity"
-            android:screenOrientation="fullSensor"
+            android:name=".module.view.scan.ScanAct"
+            android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
 
 
