--- a/heavycenter/src/main/AndroidManifest.xml
+++ b/heavycenter/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             tools:replace="android:label,android:theme">
 
         <activity android:name=".module.welc.welc.WelcAct"
+            android:launchMode="singleInstance"
                   android:windowSoftInputMode="adjustPan|stateHidden"
                   android:screenOrientation="portrait">
             <intent-filter>
