--- a/heavycenter/build.gradle
+++ b/heavycenter/build.gradle
@@ -76,8 +76,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.github.bumptech.glide:glide:4.0.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    compile 'com.github.bumptech.glide:glide:4.5.0'//图片加载
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'////如果glideapp找不到 build-make project
     compile 'org.greenrobot:eventbus:3.0.0'
     compile project(':lib')
     implementation files('libs/BaiduLBS_Android.jar')
