--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,9 @@
 # org.gradle.parallel=true
 #Sat Jan 13 12:52:10 CST 2018
 systemProp.http.proxyHost=127.0.0.1
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs = -Xmx2048m
 systemProp.http.proxyPort=51940
-android.useDeprecatedNdk=true
+#android.useDeprecatedNdk=true
+#org.gradle.daemon=true
+#org.gradle.parallel=true
+#org.gradle.configureondemand=true
