--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,6 @@ systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs = -Xmx2048m
 systemProp.http.proxyPort=51940
 #android.useDeprecatedNdk=true
-#org.gradle.daemon=true
-#org.gradle.parallel=true
-#org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
