--- a/heavycenter/src/main/AndroidManifest.xml
+++ b/heavycenter/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
 
         </activity>
 
-        <activity android:name=".module.main.MainAct"
+        <activity android:name=".module.main.main.MainAct"
                   android:windowSoftInputMode="adjustPan|stateHidden"
                   android:screenOrientation="portrait">
         </activity>
