--- a/service/build.gradle
+++ b/service/build.gradle
@@ -71,8 +71,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.5.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile project(':lib')
-    compile 'com.hyphenate:hyphenate-sdk:3.3.4'
     compile files('libs/jsms_android-1.1.0.jar')
     compile files('libs/jcore-android-1.1.7.jar')
     compile files('libs/jpush-android-3.0.9.jar')
+    implementation files('libs/hyphenatechat_3.3.9.jar')
 }
